# TranslateValhallToOpenCL

./: CMakeLists.txt  README.md  native-lib.cpp
.github/workflows/: build.yml
include/CL/: cl_platform.h
